2005-03-29  Alexander Shopov  <ash@contact.bg>

	* configure.in: Added "bg" (Bulgarian) to ALL_LINGUAS

2005-03-18  Dani Carbonell  <bocata@panete.net>

	* src/client.c
	* src/dialogs.c
	* src/fields.c
	* src/misc.c
	* src/misc.h
	* src/partyline.c
	* src/tetrinet.c
	* src/winlist.c: Applied patch from Vidar Holen, which implements
	proper UTF-8 support. Just convert all incoming data to UTF-8, and
	avoid any other conversion. Rocks!

2005-03-05  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "tr" "vi" to ALL_LINGUAS.

2004-12-26  Jordi Mallach  <jordi@sindominio.net>

	* MAINTAINERS: Add.

	* NEWS: Update for 0.7.8.
	* configure.in: Release gtetrinet 0.7.8.

2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2004-10-26  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Update for new translations.

2004-10-21  Loren Abrams  <durnew@pacbell.net>

	* NEWS: GTetrinet is now minimally compliant with tetrinet.org's new
	scoring requirements.
	* src/tetrinet.c (tetrinet_inmessage): Added support for btrixnewgame.
	Added support for clientinfo identification.  Both features of the
	Blocktrix protocol.
	(tetrinet_nextblock): Added support for a no block delay btrixnewgame.
	* src/client.c: Added support for transfer of IN_BTRIXNEWGAME and
	OUT_CLIENTINFO protocol messages.

2004-10-05 Amanpreet Singh Alam <amanpreetaalm@yahoo.com>
	
	* configure.in (ALL_LINGUAS): Add "pa" Punjabi language.

2004-08-31  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (ALL_LINGUAS): Added "ko" (Korean).
	* NEWS: Update.
	* autogen.sh: Require automake 1.7 again, hoping that it's
	not broken anymore.

2004-07-17  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: Added "it" (Italian) to ALL_LINGUAS.

2004-04-18  Jordi Mallach  <jordi@sindominio.net>

	* autogen.sh: Back out automake-1.7 requirement.
	* NEWS: Updated for 0.7.7.
	* configure.in: Released gtetrinet 0.7.7.

2004-04-16  Dani Carbonell  <bocata@panete.net>
